tests/samples/valid/implicit_array_type.pn
fn main() -> i32
{
	var x = [17, 50];
	x[1] = 200;
	return: x[1]
}
