tests/samples/invalid/mismatched_array_type.pn
fn main()
{
	var x: [2]bool = [
		0,
		1,
	];
}
